--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 
 group = 'aki.parser.pdf'
 version = '0.0.2'
-description = """Gmr Pdf Parser"""
+description = """Pdf Parser"""
 mainClassName = 'aki.parser.pdf.PdfParseImages'
 
 sourceCompatibility = 1.8
@@ -15,6 +15,9 @@ repositories {
 
 dependencies {
     compile "org.apache.pdfbox:pdfbox:2.0.8"
+    compile 'com.github.jai-imageio:jai-imageio-core:1.3.1'
+    compile 'com.github.jai-imageio:jai-imageio-jpeg2000:1.3.0'
+    compile 'org.apache.pdfbox:jbig2-imageio:3.0.0'
 
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
